--- a/styles/debug.css
+++ b/styles/debug.css
@@ -6,8 +6,6 @@
  */
 @font-face {
   font-family: "Emoji";
-  font-style: normal;
-  font-weight: 400;
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
 .colors {
   zoom: 1; }
@@ -70,10 +68,10 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Eau Douce", "Emoji", sans-serif; }
+  font-family: Helvetica Neue, Calibri, Emoji, sans-serif; }
 
 .font-family-code {
-  font-family: "M+ 1m Latin", "Emoji", monospace; }
+  font-family: Menlo, Consolas, Emoji, monospace; }
 
 .italic {
   font-style: italic; }
