--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.69.10
+ * style.css v6.70.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -128,8 +128,6 @@ td {
 
 @font-face {
   font-family: "Emoji";
-  font-style: normal;
-  font-weight: 400;
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
@@ -243,7 +241,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Eau Douce", "Emoji", sans-serif;
+  font-family: Helvetica Neue, Calibri, Emoji, sans-serif;
   line-height: 1.456; }
   @media (min-width: 39.118rem) {
     body {
@@ -279,7 +277,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "M+ 1m Latin", "Emoji", monospace;
+  font-family: Menlo, Consolas, Emoji, monospace;
   line-height: 1.294; }
   @media (min-width: 39.118rem) {
     pre {
@@ -384,7 +382,7 @@ code,
 var,
 samp,
 kbd {
-  font-family: "M+ 1m Latin", "Emoji", monospace; }
+  font-family: Menlo, Consolas, Emoji, monospace; }
   p code::before, p code::after, p
   var::before, p
   var::after, p
@@ -488,7 +486,6 @@ th {
 
 .tagline {
   color: #6a625e;
-  font-family: "Niconne", "Eau Douce", "Emoji", sans-serif;
   font-size: 1.618rem;
   font-weight: 400;
   margin-top: 2.618rem; }
@@ -868,9 +865,6 @@ html {
   var,
   kbd {
     font-family: monospace; }
-
-  .tagline {
-    font-family: serif; }
 
   h1,
   h2,
