--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.1
+ * style.css v6.70.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -476,6 +476,8 @@ th {
     display: table-cell;
     line-height: 3.01rem;
     padding-left: 0.809rem; }
+    .site-navigation li:first-child {
+      padding-left: 0; }
   .site-navigation a {
     color: inherit;
     display: inline-block; }
@@ -561,6 +563,8 @@ th {
     .footlinks li:first-child::after {
       content: "·";
       margin-left: 0.809rem; }
+    .footlinks li:last-child {
+      padding-right: 0; }
   @media (min-width: 53.487rem) {
     .footlinks {
       margin-top: 11.09rem; } }
