--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -22,7 +22,7 @@
         <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}">
-              <h1 class="first-heading">{{{title}}}</h1>
+              <h1 class="first-heading">{{title}}</h1>
 
               <footer class="section-footer">
                 <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
@@ -45,7 +45,7 @@
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-                <a href="{{link}}">{{{title}}}</a>
+                <a href="{{link}}">{{title}}</a>
               </li>
             {{/item}}
           </ol>
@@ -60,7 +60,7 @@
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-                <a href="{{link}}">{{{title}}}</a>
+                <a href="{{link}}">{{title}}</a>
               </li>
             {{/item}}
           </ol>
