--- a/styles/documents.css
+++ b/styles/documents.css
@@ -458,6 +458,7 @@ table {
 body {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
+  margin: 1em;
   max-width: 45em; }
 
 h2:target,
@@ -514,24 +515,19 @@ th {
   .seealso a {
     font-weight: 400; }
 
-@media (min-width: 28.5em) {
+@media (min-width: 28em) {
   body {
-    margin: 2em; } }
-@media (min-width: 51em) {
+    margin: 1em; } }
+@media (min-width: 52em) {
   body {
-    margin-top: 4em; } }
-@media (min-width: 64em) {
-  .adsense {
-    position: absolute;
-    right: 2em;
-    top: 2em; } }
-@media (min-width: 74em) {
+    margin-top: 1em; } }
+@media (min-width: 57em) {
   body {
     padding-left: 10em; }
 
   .banner {
-    margin-left: -12em;
-    margin-right: -2em;
+    margin-left: -11em;
+    margin-right: -1em;
     max-width: none; } }
 @media print {
   * {
@@ -569,7 +565,4 @@ th {
     font-style: italic; }
 
   mark {
-    background: 0 0; }
-
-  .adsense {
-    display: none; } }
+    background: 0 0; } }
