--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.4
+ * style.css v6.70.5
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -134,7 +134,7 @@ td {
   max-width: 36rem;
   padding-left: 0.809rem;
   padding-right: 0.809rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 15.178rem; } }
 
@@ -153,7 +153,7 @@ td {
   text-overflow: ellipsis;
   white-space: nowrap; }
 
-@media (min-width: 53.487rem) {
+@media (min-width: 60.173rem) {
   figcaption, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
@@ -236,27 +236,33 @@ html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
+  @media (min-width: 41.563rem) {
+    html {
+      font-size: 106.25%; } }
+  @media (min-width: 60.173rem) {
+    html {
+      font-size: 112.5%; } }
 
 body {
   background-color: #fcf9f0;
   color: #3c3330;
   font-family: "Helvetica Neue", "Calibri", "Emoji", sans-serif;
   line-height: 1.456; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     body {
       line-height: 1.618; } }
 
 h1 {
   font-size: 1.618rem;
   margin: 11.09rem 0 0; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     h1 {
       font-size: 2.124rem; } }
 
 h2 {
   font-size: 1.313rem;
   margin: 4.236rem 0 0; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     h2 {
       font-size: 1.618rem; } }
 
@@ -278,7 +284,7 @@ pre {
   clear: both;
   font-family: "Menlo", "Consolas", "Emoji", monospace;
   line-height: 1.294; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     pre {
       overflow: visible;
       overflow-wrap: break-word;
@@ -290,7 +296,7 @@ blockquote {
   color: #6a625e;
   margin: 0;
   padding-left: 1.618rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     blockquote {
       margin-left: -1.868rem; } }
 
@@ -303,7 +309,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -332,7 +338,7 @@ figcaption {
     color: #6a625e;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     figcaption {
       border-top: 0.063rem solid #cac5be;
       padding-top: 0.681rem; }
@@ -453,11 +459,11 @@ th {
   z-index: 10; }
   .logo.to-top {
     cursor: pointer; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .logo {
       height: 4.87rem;
       width: 3.247rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .logo {
       margin-left: -14.369rem; } }
 
@@ -480,7 +486,7 @@ th {
   .site-navigation mark {
     background-color: transparent;
     border-bottom: 0.125rem solid #1188bb; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .site-navigation li {
       line-height: 4.87rem;
       padding-left: 1.618rem; } }
@@ -490,11 +496,11 @@ th {
   font-size: 1.618rem;
   font-weight: 400;
   margin-top: 2.618rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .tagline {
       font-size: 2.124rem;
       margin-top: 4.236rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .tagline {
       font-size: 2.618rem;
       margin-left: -14.369rem;
@@ -503,10 +509,10 @@ th {
 
 .content {
   margin-top: -8.472rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .content {
       margin-top: -6.854rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .content {
       margin-top: -4.236rem; } }
 
@@ -516,11 +522,11 @@ th {
     color: #6a625e;
     font-size: 1.618rem;
     padding-bottom: 1.0rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     [role="main"] > .first-heading {
       font-size: 2.124rem;
       padding-bottom: 2.618rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .first-heading {
       margin-top: 11.09rem; }
       [role="main"] > .first-heading {
@@ -532,7 +538,7 @@ th {
   bottom: 100%;
   position: absolute;
   width: 100%; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
@@ -560,7 +566,7 @@ th {
       margin-left: 0.809rem; }
     .footlinks li:last-child {
       padding-right: 0; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .footlinks {
       margin-top: 11.09rem; } }
 
@@ -576,7 +582,7 @@ th {
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .byline {
       bottom: 0;
       left: 0.809rem;
@@ -585,14 +591,14 @@ th {
 .site-search {
   max-width: 22.249rem;
   top: 4.236rem; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .site-search {
       max-width: 13.751rem;
       position: absolute;
       right: 0.809rem;
       top: 6.576rem;
       z-index: 1; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .site-search {
       top: 10.812rem; } }
 
@@ -660,14 +666,14 @@ th {
 
 .drop img {
   min-width: 12.751rem; }
-@media (min-width: 53.487rem) {
+@media (min-width: 60.173rem) {
   .drop {
     float: left;
     margin-left: -14.369rem;
     margin-right: 0.809rem;
     max-width: 32.369rem; } }
 
-@media (min-width: 39.118rem) {
+@media (min-width: 41.563rem) {
   .flat-ul {
     margin-left: -0.809rem;
     margin-right: -0.809rem;
@@ -680,7 +686,7 @@ th {
       padding-right: 0.809rem;
       width: 33.333%; } }
 
-@media (min-width: 39.118rem) {
+@media (min-width: 41.563rem) {
   .floatage-left {
     float: left;
     margin-right: 0.809rem;
@@ -710,7 +716,7 @@ th {
     width: 100%; }
   .full-width figcaption:last-child {
     margin-left: 0.809rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .full-width {
       margin-left: -15.178rem; }
       .full-width figcaption:last-child {
@@ -735,12 +741,12 @@ th {
     padding-top: 1rem; }
     .post-list li:first-child {
       border-top-width: 0; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .post-list .info {
       float: right;
       line-height: 2.094;
       margin-left: 0.809rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .post-list li {
       margin-left: -14.369rem;
       padding-left: 14.369rem; }
@@ -751,11 +757,13 @@ th {
       padding-top: 1rem; } }
 
 .pull-quote {
+  border-left: 0;
   color: #6a625e;
   font-size: 1.618rem;
   line-height: 1.294;
   margin-left: 1.618rem;
   margin-right: 1.618rem;
+  padding-left: 0;
   text-align: center; }
   .pull-quote p {
     quotes: "\201c" "\201d"; }
@@ -765,15 +773,15 @@ th {
     .pull-quote p::after {
       content: close-quote;
       font-weight: bolder; }
-  @media (min-width: 39.118rem) {
+  @media (min-width: 41.563rem) {
     .pull-quote {
       margin-left: 2.618rem;
       margin-right: 2.618rem; } }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .pull-quote {
       float: left;
       margin-left: -14.369rem;
-      width: 27.12rem; } }
+      width: 22.249rem; } }
 
 .read-older a::before {
   color: #534a47;
@@ -787,7 +795,7 @@ th {
   font-size: 1.618rem;
   line-height: 1.294;
   margin-top: 0; }
-@media (min-width: 53.487rem) {
+@media (min-width: 60.173rem) {
   .read-older a::before {
     line-height: 2.094;
     margin-top: 0; }
@@ -801,7 +809,7 @@ th {
 .sidenote {
   color: #98928c;
   font-size: 0.811rem; }
-  @media (min-width: 53.487rem) {
+  @media (min-width: 60.173rem) {
     .sidenote {
       top: auto; } }
 
@@ -813,6 +821,7 @@ th {
   max-width: 336px; }
 
 .share-buttons ul {
+  display: table;
   padding-left: 0; }
   .share-buttons ul::before {
     color: #534a47;
@@ -823,9 +832,10 @@ th {
 .share-buttons li {
   display: table-cell;
   padding-left: 0.809rem; }
-@media (min-width: 53.487rem) {
+@media (min-width: 60.173rem) {
   .share-buttons ul {
     bottom: 0;
+    display: block;
     top: auto; }
     .share-buttons ul::before {
       display: block; }
