--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.6
+ * style.css v6.70.7
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -251,6 +251,9 @@ body {
   @media (min-width: 41.563rem) {
     body {
       line-height: 1.618; } }
+  @media (min-width: 60.173rem) {
+    body {
+      line-height: 1.78; } }
 
 h1 {
   font-size: 1.618rem;
@@ -815,11 +818,21 @@ th {
   color: inherit; }
 
 .adsbygoogle {
+  margin-left: -0.809rem;
+  margin-right: -0.809rem;
   margin-top: 2.618rem;
-  max-width: 336px; }
+  width: 300px;
+  height: 250px; }
+  @media (min-width: 326px) {
+    .adsbygoogle {
+      margin-left: 0;
+      margin-right: 0; } }
+  @media (min-width: 362px) {
+    .adsbygoogle {
+      height: 280px;
+      width: 336px; } }
 
 .share-buttons ul {
-  display: table;
   padding-left: 0; }
   .share-buttons ul::before {
     color: #534a47;
@@ -833,7 +846,6 @@ th {
 @media (min-width: 60.173rem) {
   .share-buttons ul {
     bottom: 0;
-    display: block;
     top: auto; }
     .share-buttons ul::before {
       display: block; }
