--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.8
+ * style.css v6.70.9
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -153,6 +153,10 @@ td {
   text-overflow: ellipsis;
   white-space: nowrap; }
 
+.ads, .flat-ul, .full-width {
+  margin-left: -0.809rem;
+  margin-right: -0.809rem; }
+
 @media (min-width: 60.173rem) {
   figcaption, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
@@ -193,7 +197,7 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
     h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a, .share-buttons a {
       color: #1188bb; } }
 
-p, pre, ul,
+p, hr, pre, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
   margin: 1.618rem 0 0; }
 
@@ -253,7 +257,7 @@ body {
       line-height: 1.618; } }
   @media (min-width: 60.173rem) {
     body {
-      line-height: 1.78; } }
+      line-height: 1.699; } }
 
 h1 {
   font-size: 1.618rem;
@@ -274,7 +278,8 @@ hr {
   border: 0;
   clear: both;
   height: 6.854rem;
-  margin: 1.618rem auto 0;
+  margin-left: auto;
+  margin-right: auto;
   width: 10.281rem; }
   hr::before {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22768%22%20height%3D%221536%22%20viewBox%3D%220%200%20768%201536%22%3E%3Cpath%20d%3D%22M352%20640v72.58l-62.85-36.29-8%2013.85L352%20731.05l16%209.24V640h-16zm48%200v100.29l16-9.24%2070.85-40.91-8-13.85L416%20712.57V640h-16zm-134.85%2077.86l-8%2013.85L320%20768l-62.85%2036.3%208%2013.8L336%20777.2l16-9.2-16-9.2-70.85-40.94zm237.7%200L416%20768l86.85%2050.1%208-13.8L448%20768l62.85-36.29-8-13.85zM400%20795.7V896h16v-72.6l62.85%2036.3%208-13.8L416%20805l-16-9.3zm-32%200l-16%209.3-17.64%2010.1-53.21%2030.8%208%2013.8L352%20823.4V896h16V795.7z%22%20fill%3D%22%23cac5be%22%2F%3E%3C%2Fsvg%3E");
@@ -550,7 +555,7 @@ th {
         bottom: auto;
         top: auto; }
         [role="main"] > .section-footer p {
-          margin-top: 1.861rem; }
+          margin-top: 1.82rem; }
       .has-image[role="main"] > .section-footer {
         bottom: 100%; } }
 
@@ -603,7 +608,7 @@ th {
       z-index: 1; } }
   @media (min-width: 60.173rem) {
     .site-search {
-      top: 10.878rem; } }
+      top: 10.845rem; } }
 
 .circular {
   border-radius: 51%; }
@@ -676,18 +681,18 @@ th {
     margin-right: 0.809rem;
     max-width: 32.369rem; } }
 
-@media (min-width: 41.563rem) {
-  .flat-ul {
-    margin-left: -0.809rem;
-    margin-right: -0.809rem;
-    padding-left: 0; }
-    .flat-ul li {
-      box-sizing: border-box;
-      display: block;
-      float: left;
-      padding-left: 0.809rem;
-      padding-right: 0.809rem;
-      width: 33.333%; } }
+.flat-ul {
+  padding-left: 3.427rem; }
+  @media (min-width: 41.563rem) {
+    .flat-ul {
+      padding-left: 0; }
+      .flat-ul li {
+        box-sizing: border-box;
+        display: block;
+        float: left;
+        padding-left: 0.809rem;
+        padding-right: 0.809rem;
+        width: 33.333%; } }
 
 @media (min-width: 41.563rem) {
   .floatage-left {
@@ -709,28 +714,25 @@ th {
   .footnote > *:first-child {
     margin-top: 0; }
 
-.full-width {
-  margin-left: -0.809rem;
-  margin-right: -0.809rem; }
-  .full-width img,
-  .full-width video,
-  .full-width canvas {
-    border: 0;
-    width: 100%; }
-  .full-width figcaption:last-child {
-    margin-left: 0.809rem; }
-  @media (min-width: 60.173rem) {
-    .full-width {
-      margin-left: -15.178rem; }
-      .full-width figcaption:last-child {
-        border-bottom: 0;
-        border-left: 0.063rem solid #cac5be;
-        bottom: auto;
-        left: 0;
-        margin-left: 0;
-        margin-top: 1.618rem;
-        padding-bottom: 0;
-        padding-left: 0.747rem; } }
+.full-width img,
+.full-width video,
+.full-width canvas {
+  border: 0;
+  width: 100%; }
+.full-width figcaption:last-child {
+  margin-left: 0.809rem; }
+@media (min-width: 60.173rem) {
+  .full-width {
+    margin-left: -15.178rem; }
+    .full-width figcaption:last-child {
+      border-bottom: 0;
+      border-left: 0.063rem solid #cac5be;
+      bottom: auto;
+      left: 0;
+      margin-left: 0;
+      margin-top: 1.618rem;
+      padding-bottom: 0;
+      padding-left: 0.747rem; } }
 
 .post-list {
   margin-top: 1rem;
@@ -818,15 +820,15 @@ th {
   color: inherit; }
 
 .adsbygoogle {
-  margin-left: -0.809rem;
-  margin-right: -0.809rem;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 2.618rem;
   width: 300px;
   height: 250px; }
   @media (min-width: 326px) {
     .adsbygoogle {
-      margin-left: 0;
-      margin-right: 0; } }
+      margin-left: 0.809rem;
+      margin-right: 0.809rem; } }
   @media (min-width: 362px) {
     .adsbygoogle {
       height: 280px;
