--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.9
+ * style.css v6.70.10
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -447,8 +447,7 @@ td {
   padding: 0.5rem;
   vertical-align: top;
   white-space: nowrap; }
-  table > :first-child > th, table > :first-child > :first-child > th, table > :first-child >
-  td, table > :first-child > :first-child >
+  :first-child > :first-child > th, :first-child > :first-child >
   td {
     border-top-width: 0; }
 
@@ -660,16 +659,7 @@ th {
   padding-right: 0;
   text-transform: uppercase;
   width: 100%; }
-.contact-form *::-moz-placeholder {
-  color: inherit;
-  opacity: 0.25; }
-.contact-form *::-ms-input-placeholder {
-  color: inherit;
-  opacity: 0.25; }
-.contact-form *::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.25; }
-.contact-form *::placeholder-shown {
+.contact-form ::placeholder-shown {
   opacity: 0.25; }
 
 .drop img {
@@ -820,11 +810,11 @@ th {
   color: inherit; }
 
 .adsbygoogle {
+  height: 250px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2.618rem;
-  width: 300px;
-  height: 250px; }
+  width: 300px; }
   @media (min-width: 326px) {
     .adsbygoogle {
       margin-left: 0.809rem;
@@ -855,11 +845,17 @@ th {
     display: block;
     padding-left: 0; } }
 
-html {
-  -ms-overflow-style: -ms-autohiding-scrollbar; }
-
 .contact-form .button {
   -webkit-appearance: none; }
+.contact-form ::-moz-placeholder {
+  color: inherit;
+  opacity: 0.25; }
+.contact-form ::-ms-input-placeholder {
+  color: inherit;
+  opacity: 0.25; }
+.contact-form ::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.25; }
 
 @media print {
   * {
@@ -916,7 +912,7 @@ html {
     max-width: 36rem; }
 
   hr {
-    border-bottom: 1px dashed;
+    border-bottom: 0.063rem dashed;
     height: 0;
     margin-bottom: 2.618rem;
     margin-top: 2.618rem;
