--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.10
+ * style.css v6.70.11
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -796,8 +796,14 @@ th {
     margin-top: 4.236rem; } }
 
 .seealso {
+  border-left: 0.25rem double;
   color: #534a47;
-  font-size: 1.313rem; }
+  font-size: 1.313rem;
+  padding-left: 0.809rem; }
+  @media (min-width: 60.173rem) {
+    .seealso {
+      margin-left: -1.868rem;
+      padding-left: 1.618rem; } }
 
 .sidenote {
   color: #98928c;
