--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.11
+ * style.css v6.70.13
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -113,6 +113,17 @@ textarea {
   /* 2 */
   margin: 0;
   /* 3 */ }
+
+::-ms-input-placeholder {
+  color: inherit;
+  opacity: .54; }
+
+::-webkit-input-placeholder {
+  color: inherit;
+  opacity: .54; }
+
+:placeholder-shown {
+  opacity: .54; }
 
 /**
  * Remove most spacing between table cells.
@@ -341,23 +352,19 @@ dd {
 
 figcaption {
   color: #6a625e; }
-  blockquote + figcaption:last-child {
+  blockquote + figcaption {
     border-left: 0.25rem solid #e1ddd5;
     color: #6a625e;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
   @media (min-width: 60.173rem) {
     figcaption {
-      border-top: 0.063rem solid #cac5be;
-      padding-top: 0.681rem; }
-      figcaption:last-child {
-        border-bottom: 0.063rem solid #cac5be;
-        border-top-width: 0;
-        bottom: 0;
-        padding-bottom: 0.681rem;
-        padding-top: 0;
-        top: auto; }
-      blockquote + figcaption:last-child {
+      border-bottom: 0.063rem solid #cac5be;
+      bottom: 0;
+      padding-bottom: 0.681rem;
+      padding-top: 0;
+      top: auto; }
+      blockquote + figcaption {
         border-bottom: 0;
         margin-left: -1.868rem;
         margin-right: 0;
@@ -654,13 +661,13 @@ th {
   font-size: 1.618rem;
   font-weight: bolder;
   letter-spacing: 0.125rem;
+  margin-left: auto;
+  margin-right: 0.5rem;
   margin-top: 1rem;
   padding-left: 0.125rem;
   padding-right: 0;
   text-transform: uppercase;
-  width: 100%; }
-.contact-form ::placeholder-shown {
-  opacity: 0.25; }
+  width: 25%; }
 
 .drop img {
   min-width: 12.751rem; }
@@ -716,13 +723,13 @@ th {
     margin-left: -15.178rem; }
     .full-width figcaption:last-child {
       border-bottom: 0;
-      border-left: 0.063rem solid #cac5be;
+      border-left: 0.25rem solid #e1ddd5;
       bottom: auto;
       left: 0;
       margin-left: 0;
       margin-top: 1.618rem;
       padding-bottom: 0;
-      padding-left: 0.747rem; } }
+      padding-left: 0.559rem; } }
 
 .post-list {
   margin-top: 1rem;
@@ -853,15 +860,6 @@ th {
 
 .contact-form .button {
   -webkit-appearance: none; }
-.contact-form ::-moz-placeholder {
-  color: inherit;
-  opacity: 0.25; }
-.contact-form ::-ms-input-placeholder {
-  color: inherit;
-  opacity: 0.25; }
-.contact-form ::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.25; }
 
 @media print {
   * {
