--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.13
+ * style.css v6.70.14
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -114,7 +114,7 @@ textarea {
   margin: 0;
   /* 3 */ }
 
-::-ms-input-placeholder {
+:-ms-input-placeholder {
   color: inherit;
   opacity: .54; }
 
@@ -145,7 +145,7 @@ td {
   max-width: 36rem;
   padding-left: 0.809rem;
   padding-right: 0.809rem; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 15.178rem; } }
 
@@ -168,7 +168,7 @@ td {
   margin-left: -0.809rem;
   margin-right: -0.809rem; }
 
-@media (min-width: 60.173rem) {
+@media (min-width: 53.487rem) {
   figcaption, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
@@ -251,36 +251,27 @@ html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
   font-size: 100%; }
-  @media (min-width: 41.563rem) {
-    html {
-      font-size: 106.25%; } }
-  @media (min-width: 60.173rem) {
-    html {
-      font-size: 112.5%; } }
 
 body {
   background-color: #fcf9f0;
   color: #3c3330;
   font-family: "Helvetica Neue", "Calibri", "Emoji", sans-serif;
   line-height: 1.456; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     body {
       line-height: 1.618; } }
-  @media (min-width: 60.173rem) {
-    body {
-      line-height: 1.699; } }
 
 h1 {
   font-size: 1.618rem;
   margin: 11.09rem 0 0; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     h1 {
       font-size: 2.124rem; } }
 
 h2 {
   font-size: 1.313rem;
   margin: 4.236rem 0 0; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     h2 {
       font-size: 1.618rem; } }
 
@@ -303,7 +294,7 @@ pre {
   clear: both;
   font-family: "Menlo", "Consolas", "Emoji", monospace;
   line-height: 1.294; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     pre {
       overflow: visible;
       overflow-wrap: break-word;
@@ -315,7 +306,7 @@ blockquote {
   color: #6a625e;
   margin: 0;
   padding-left: 1.618rem; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     blockquote {
       margin-left: -1.868rem; } }
 
@@ -328,7 +319,7 @@ ol {
   ol ul,
   ol ol {
     margin-top: 0; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     ul,
     ol {
       padding-left: 0; }
@@ -357,7 +348,7 @@ figcaption {
     color: #6a625e;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     figcaption {
       border-bottom: 0.063rem solid #cac5be;
       bottom: 0;
@@ -473,11 +464,11 @@ th {
   z-index: 10; }
   .logo.to-top {
     cursor: pointer; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .logo {
       height: 4.87rem;
       width: 3.247rem; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .logo {
       margin-left: -14.369rem; } }
 
@@ -500,7 +491,7 @@ th {
   .site-navigation mark {
     background-color: transparent;
     border-bottom: 0.125rem solid #1188bb; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .site-navigation li {
       line-height: 4.87rem;
       padding-left: 1.618rem; } }
@@ -510,11 +501,11 @@ th {
   font-size: 1.618rem;
   font-weight: 400;
   margin-top: 2.618rem; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .tagline {
       font-size: 2.124rem;
       margin-top: 4.236rem; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .tagline {
       font-size: 2.618rem;
       margin-left: -14.369rem;
@@ -523,10 +514,10 @@ th {
 
 .content {
   margin-top: -8.472rem; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .content {
       margin-top: -6.854rem; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .content {
       margin-top: -4.236rem; } }
 
@@ -536,11 +527,11 @@ th {
     color: #6a625e;
     font-size: 1.618rem;
     padding-bottom: 1.0rem; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     [role="main"] > .first-heading {
       font-size: 2.124rem;
       padding-bottom: 2.618rem; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .first-heading {
       margin-top: 11.09rem; }
       [role="main"] > .first-heading {
@@ -552,7 +543,7 @@ th {
   bottom: 100%;
   position: absolute;
   width: 100%; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
@@ -561,7 +552,7 @@ th {
         bottom: auto;
         top: auto; }
         [role="main"] > .section-footer p {
-          margin-top: 1.82rem; }
+          margin-top: 1.699rem; }
       .has-image[role="main"] > .section-footer {
         bottom: 100%; } }
 
@@ -580,7 +571,7 @@ th {
       margin-left: 0.809rem; }
     .footlinks li:last-child {
       padding-right: 0; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .footlinks {
       margin-top: 11.09rem; } }
 
@@ -596,7 +587,7 @@ th {
   .byline mark {
     background-color: transparent;
     color: inherit; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .byline {
       bottom: 0;
       left: 0.809rem;
@@ -605,16 +596,16 @@ th {
 .site-search {
   max-width: 22.249rem;
   top: 4.236rem; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .site-search {
       max-width: 13.751rem;
       position: absolute;
       right: 0.809rem;
       top: 6.576rem;
       z-index: 1; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .site-search {
-      top: 10.845rem; } }
+      top: 10.747rem; } }
 
 .circular {
   border-radius: 51%; }
@@ -660,18 +651,13 @@ th {
   display: block;
   font-size: 1.618rem;
   font-weight: bolder;
-  letter-spacing: 0.125rem;
-  margin-left: auto;
-  margin-right: 0.5rem;
   margin-top: 1rem;
-  padding-left: 0.125rem;
-  padding-right: 0;
   text-transform: uppercase;
-  width: 25%; }
+  width: 100%; }
 
 .drop img {
   min-width: 12.751rem; }
-@media (min-width: 60.173rem) {
+@media (min-width: 53.487rem) {
   .drop {
     float: left;
     margin-left: -14.369rem;
@@ -680,7 +666,7 @@ th {
 
 .flat-ul {
   padding-left: 3.427rem; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .flat-ul {
       padding-left: 0; }
       .flat-ul li {
@@ -691,7 +677,7 @@ th {
         padding-right: 0.809rem;
         width: 33.333%; } }
 
-@media (min-width: 41.563rem) {
+@media (min-width: 39.118rem) {
   .floatage-left {
     float: left;
     margin-right: 0.809rem;
@@ -718,7 +704,7 @@ th {
   width: 100%; }
 .full-width figcaption:last-child {
   margin-left: 0.809rem; }
-@media (min-width: 60.173rem) {
+@media (min-width: 53.487rem) {
   .full-width {
     margin-left: -15.178rem; }
     .full-width figcaption:last-child {
@@ -743,12 +729,12 @@ th {
     padding-top: 1rem; }
     .post-list li:first-child {
       border-top-width: 0; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .post-list .info {
       float: right;
       line-height: 2.094;
       margin-left: 0.809rem; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .post-list li {
       margin-left: -14.369rem;
       padding-left: 14.369rem; }
@@ -773,11 +759,11 @@ th {
     .pull-quote p::after {
       content: close-quote;
       font-weight: bolder; }
-  @media (min-width: 41.563rem) {
+  @media (min-width: 39.118rem) {
     .pull-quote {
       margin-left: 2.618rem;
       margin-right: 2.618rem; } }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .pull-quote {
       float: left;
       margin-left: -14.369rem;
@@ -795,7 +781,7 @@ th {
   font-size: 1.618rem;
   line-height: 1.294;
   margin-top: 0; }
-@media (min-width: 60.173rem) {
+@media (min-width: 53.487rem) {
   .read-older a::before {
     line-height: 2.094;
     margin-top: 0; }
@@ -807,7 +793,7 @@ th {
   color: #534a47;
   font-size: 1.313rem;
   padding-left: 0.809rem; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .seealso {
       margin-left: -1.868rem;
       padding-left: 1.618rem; } }
@@ -815,7 +801,7 @@ th {
 .sidenote {
   color: #98928c;
   font-size: 0.811rem; }
-  @media (min-width: 60.173rem) {
+  @media (min-width: 53.487rem) {
     .sidenote {
       top: auto; } }
 
@@ -848,7 +834,7 @@ th {
 .share-buttons li {
   display: table-cell;
   padding-left: 0.809rem; }
-@media (min-width: 60.173rem) {
+@media (min-width: 53.487rem) {
   .share-buttons ul {
     bottom: 0;
     top: auto; }
