--- a/styles/debug.css
+++ b/styles/debug.css
@@ -126,25 +126,25 @@ body::after {
   .colors.variation-tint li:nth-child(5)::before {
     background-color: #f8f5ec; }
   .colors.variation-accent li:nth-child(1)::before {
-    background-color: #1188bb; }
+    background-color: #278dd2; }
   .colors.variation-accent li:nth-child(2)::before {
-    background-color: #045375; }
+    background-color: #065a90; }
   .colors.variation-accent li:nth-child(3)::before {
-    background-color: #056b97; }
+    background-color: #097ecc; }
   .colors.variation-accent li:nth-child(4)::before {
-    background-color: #3598c3; }
+    background-color: #4ba2db; }
   .colors.variation-accent li:nth-child(5)::before {
-    background-color: #5bacd0; }
+    background-color: #75bae7; }
   .colors.variation-accent.complement li:nth-child(1)::before {
-    background-color: #ff8c0c; }
+    background-color: #ff6900; }
   .colors.variation-accent.complement li:nth-child(2)::before {
-    background-color: #b94f00; }
+    background-color: #9f2100; }
   .colors.variation-accent.complement li:nth-child(3)::before {
-    background-color: #cf6900; }
+    background-color: #c94500; }
   .colors.variation-accent.complement li:nth-child(4)::before {
-    background-color: #ffac0e; }
+    background-color: #ffba00; }
   .colors.variation-accent.complement li:nth-child(5)::before {
-    background-color: #ffd913; }
+    background-color: #ffde00; }
 
 .line-length {
   font-family: "Verdana", sans-serif;
