--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.70.14
+ * style.css v6.71.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -206,7 +206,7 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
   text-decoration: none; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a, .share-buttons a {
-      color: #1188bb; } }
+      color: #278dd2; } }
 
 p, hr, pre, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
@@ -235,7 +235,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   direction: ltr;
   text-indent: -9999px;
   background-color: transparent;
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%231188bb%22%2F%3E%3C%2Fsvg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23278dd2%22%2F%3E%3C%2Fsvg%3E");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -364,13 +364,13 @@ figcaption {
         width: auto; } }
 
 a {
-  color: #1188bb;
+  color: #278dd2;
   text-decoration: underline; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     a {
-      -moz-text-decoration-color: #5bacd0;
-      -webkit-text-decoration-color: #5bacd0;
-      text-decoration-color: #5bacd0;
+      -moz-text-decoration-color: #75bae7;
+      -webkit-text-decoration-color: #75bae7;
+      text-decoration-color: #75bae7;
       color: inherit; } }
 
 em {
@@ -379,7 +379,7 @@ em {
   font-weight: bolder; }
 
 strong {
-  color: #ff8c0c;
+  color: #ff6900;
   font-weight: bolder; }
 
 cite {
@@ -407,7 +407,7 @@ kbd {
     width: 0; }
 
 mark {
-  background-color: #ffd913;
+  background-color: #ffde00;
   color: inherit; }
 
 ins {
@@ -490,7 +490,7 @@ th {
     display: inline-block; }
   .site-navigation mark {
     background-color: transparent;
-    border-bottom: 0.125rem solid #1188bb; }
+    border-bottom: 0.125rem solid #278dd2; }
   @media (min-width: 39.118rem) {
     .site-navigation li {
       line-height: 4.87rem;
@@ -643,7 +643,7 @@ th {
   resize: vertical;
   width: 100%; }
 .contact-form .button {
-  background-color: #5bacd0;
+  background-color: #75bae7;
   border: 0;
   border-radius: 0.125rem;
   color: #f8f5ec;
