--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.71.0
+ * style.css v6.71.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -689,13 +689,11 @@ th {
     max-width: 38.197%; } }
 .footnote {
   background-image: linear-gradient(to right, #cac5be 0, #cac5be 50%, transparent 50%, transparent 100%);
+  background-position: 0 1.618rem;
   background-repeat: repeat-x;
   background-size: 0.5rem 0.063rem;
   font-size: 0.811rem;
-  margin-top: 1.618rem;
   padding-top: 0.618rem; }
-  .footnote > *:first-child {
-    margin-top: 0; }
 
 .full-width img,
 .full-width video,
