Remove markup from taglines

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -22,7 +22,7 @@
     </ul>
   </nav>
 
-  {{#tagline}}<h1 class="tagline">{{{.}}}</h1>{{/tagline}}
+  {{#tagline}}<h1 class="tagline">{{.}}</h1>{{/tagline}}
 {{#weblog_child}}
   <?$permalink::is_permalink ne="1"></header></?>
   <?$permalink::is_permalink eq="1"></div></?>
