--- a/styles/debug.css
+++ b/styles/debug.css
@@ -68,10 +68,10 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Helvetica Neue", "Calibri", "Emoji", sans-serif; }
+  font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif; }
 
 .font-family-code {
-  font-family: "Menlo", "Consolas", "Emoji", monospace; }
+  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace; }
 
 .italic {
   font-style: italic; }
