--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.71.1
+ * style.css v6.72.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -255,7 +255,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Helvetica Neue", "Calibri", "Emoji", sans-serif;
+  font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
   line-height: 1.456; }
   @media (min-width: 39.118rem) {
     body {
@@ -292,7 +292,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "Menlo", "Consolas", "Emoji", monospace;
+  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace;
   line-height: 1.294; }
   @media (min-width: 39.118rem) {
     pre {
@@ -393,7 +393,7 @@ code,
 var,
 samp,
 kbd {
-  font-family: "Menlo", "Consolas", "Emoji", monospace; }
+  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace; }
   p code::before, p code::after, p
   var::before, p
   var::after, p
@@ -498,6 +498,7 @@ th {
 
 .tagline {
   color: #6a625e;
+  font-family: "Niconne", "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
   font-size: 1.618rem;
   font-weight: 400;
   margin-top: 2.618rem; }
@@ -874,6 +875,9 @@ th {
   var,
   kbd {
     font-family: monospace; }
+
+  .tagline {
+    font-family: serif; }
 
   h1,
   h2,
