--- a/styles/eau-douce.css
+++ b/styles/eau-douce.css
@@ -1,15 +1,10 @@
-/*!
- * Eau Douce
- *
- * Copyright 2008-2011 Yamaoka Yasuhiro (http://www.yoworks.com/). All Rights Reserved.
- */
 @font-face {
   font-family: "Eau Douce";
-  font-style: normal;
   font-weight: 400;
-  src: local("Eau Douce"), url("../fonts/eau-douce/r.woff2") format("woff2"), url("../fonts/eau-douce/r.woff") format("woff"); }
+  font-style: normal;
+  src: url("assets/fonts/eau-douce/r.woff") format("woff"), url("assets/fonts/eau-douce/r.woff2") format("woff2"); }
 @font-face {
   font-family: "Eau Douce";
-  font-style: normal;
   font-weight: 700;
-  src: local("Eau Douce Bold"), url("../fonts/eau-douce/b.woff2") format("woff2"), url("../fonts/eau-douce/b.woff") format("woff"); }
+  font-style: normal;
+  src: url("assets/fonts/eau-douce/b.woff") format("woff"), url("assets/fonts/eau-douce/b.woff2") format("woff2"); }
