--- a/styles/eau-douce.css
+++ b/styles/eau-douce.css
@@ -2,9 +2,9 @@
   font-family: "Eau Douce";
   font-weight: 400;
   font-style: normal;
-  src: url("assets/fonts/eau-douce/r.woff") format("woff"), url("assets/fonts/eau-douce/r.woff2") format("woff2"); }
+  src: url("../fonts/eau-douce/r.woff") format("woff"), url("../fonts/eau-douce/r.woff2") format("woff2"); }
 @font-face {
   font-family: "Eau Douce";
   font-weight: 700;
   font-style: normal;
-  src: url("assets/fonts/eau-douce/b.woff") format("woff"), url("assets/fonts/eau-douce/b.woff2") format("woff2"); }
+  src: url("../fonts/eau-douce/b.woff") format("woff"), url("../fonts/eau-douce/b.woff2") format("woff2"); }
