--- a/styles/niconne.css
+++ b/styles/niconne.css
@@ -2,4 +2,4 @@
   font-family: "Niconne";
   font-weight: 400;
   font-style: normal;
-  src: url("assets/fonts/niconne/r-26.woff") format("woff"), url("assets/fonts/niconne/r-26.woff2") format("woff2"); }
+  src: url("../fonts/niconne/r-26.woff") format("woff"), url("../fonts/niconne/r-26.woff2") format("woff2"); }
