--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.72.0
+ * style.css v6.73.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -454,20 +454,26 @@ th {
   thead th {
     border-bottom: 0.125rem solid #cac5be; }
 
+.global-header {
+  margin-top: 1rem; }
+  @media (min-width: 39.118rem) {
+    .global-header {
+      margin-top: 1.618rem; } }
+
 .logo {
   background-color: transparent;
   display: block;
   height: 3.01rem;
   margin-top: 0;
   position: fixed;
-  width: 2.007rem;
+  width: 3.01rem;
   z-index: 10; }
   .logo.to-top {
     cursor: pointer; }
   @media (min-width: 39.118rem) {
     .logo {
-      height: 4.87rem;
-      width: 3.247rem; } }
+      height: 4.013rem;
+      width: 4.013rem; } }
   @media (min-width: 53.487rem) {
     .logo {
       margin-left: -14.369rem; } }
@@ -493,7 +499,7 @@ th {
     border-bottom: 0.125rem solid #278dd2; }
   @media (min-width: 39.118rem) {
     .site-navigation li {
-      line-height: 4.87rem;
+      line-height: 4.013rem;
       padding-left: 1.618rem; } }
 
 .tagline {
@@ -782,8 +788,8 @@ th {
   margin-top: 0; }
 @media (min-width: 53.487rem) {
   .read-older a::before {
-    line-height: 2.094;
-    margin-top: 0; }
+    margin-top: -0.5rem;
+    top: 50%; }
   .read-older p {
     margin-top: 4.236rem; } }
 
@@ -845,6 +851,9 @@ th {
 
 .contact-form .button {
   -webkit-appearance: none; }
+
+pre {
+  padding-bottom: 1px; }
 
 @media print {
   * {
