--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.73.0
+ * style.css v6.73.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -465,9 +465,7 @@ th {
   display: block;
   height: 3.01rem;
   margin-top: 0;
-  position: fixed;
-  width: 3.01rem;
-  z-index: 10; }
+  width: 3.01rem; }
   .logo.to-top {
     cursor: pointer; }
   @media (min-width: 39.118rem) {
@@ -481,16 +479,17 @@ th {
 .site-navigation {
   display: table;
   font-size: 0.811rem;
-  margin-left: auto;
   margin-top: 0;
   padding-left: 0;
-  text-transform: uppercase; }
+  position: absolute;
+  right: 0;
+  text-transform: uppercase;
+  top: 0; }
   .site-navigation li {
     display: table-cell;
     line-height: 3.01rem;
-    padding-left: 0.809rem; }
-    .site-navigation li:first-child {
-      padding-left: 0; }
+    padding-left: 0.809rem;
+    padding-right: 0.809rem; }
   .site-navigation a {
     color: inherit;
     display: inline-block; }
@@ -499,8 +498,7 @@ th {
     border-bottom: 0.125rem solid #278dd2; }
   @media (min-width: 39.118rem) {
     .site-navigation li {
-      line-height: 4.013rem;
-      padding-left: 1.618rem; } }
+      line-height: 4.013rem; } }
 
 .tagline {
   color: #6a625e;
@@ -657,10 +655,11 @@ th {
   cursor: pointer;
   display: block;
   font-size: 1.618rem;
-  font-weight: bolder;
+  margin-left: auto;
   margin-top: 1rem;
-  text-transform: uppercase;
-  width: 100%; }
+  padding-left: 1.618rem;
+  padding-right: 1.618rem;
+  text-transform: uppercase; }
 
 .drop img {
   min-width: 12.751rem; }
