Split schem and domain from URL

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -14,12 +14,12 @@
 
     <?$permalink::is_permalink ne="1">
       <meta content="$categories::title$categories::title_sep$blog_title - {{site_title}}" itemprop="name">
-      <meta content="{{protocol}}{{image}}" itemprop="image">
+      <meta content="{{scheme}}//{{domain}}{{image}}" itemprop="image">
       <link href="{{canonical}}" itemprop="url">
       <meta content="{{description}}" itemprop="description">
 
       <meta content="$categories::title$categories::title_sep$blog_title - {{site_title}}" property="og:title">
-      <meta content="{{protocol}}{{image}}" property="og:image">
+      <meta content="{{scheme}}//{{domain}}{{image}}" property="og:image">
       <meta content="{{description}}" property="og:description">
     </?>
 
@@ -66,7 +66,7 @@
 <!-- blosxom story -->
       <?$permalink::is_permalink eq="1"><div</?><?$utils::has_eyecatch eq="1"> class="has-image"</?><?$permalink::is_permalink eq="1"> role="main"</?><?$permalink::is_permalink eq="1">></?>
       <?$permalink::is_permalink ne="1"><article></?>
-        <?$utils::has_image ne="1"><meta content="{{protocol}}{{image}}" itemprop="image"></?>
+        <?$utils::has_image ne="1"><meta content="{{scheme}}//{{domain}}{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
         <h1 class="first-heading" itemprop="name">$title</h1>
