--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,3 +1,3 @@
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
+<link href="{{touch_icon}}" rel="apple-touch-icon" type="image/png">
 <link href="{{canonical}}" rel="canonical">
 <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
