Make `og:type` default value to `website`

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -19,17 +19,18 @@
       <meta content="{{description}}" itemprop="description">
 
       <meta content="$categories::title$categories::title_sep$blog_title - {{site_title}}" property="og:title">
+      <meta content="{{type}}" property="og:type">
       <meta content="{{scheme}}//{{domain}}{{image}}" property="og:image">
       <meta content="{{description}}" property="og:description">
     </?>
 
     <?$permalink::is_permalink eq="1">
+      <meta content="article" property="og:type">
       <meta content="$permalink::title" property="og:title">
       <meta content="$utils::ogp_image" property="og:image">
       <meta content="$permalink::description" property="og:description">
     </?>
 
-    <meta content="{{type}}" property="og:type">
     <meta content="$utils::canonical" property="og:url">
     <meta content="ja_JP" property="og:locale">
     <meta content="{{site_title}}" property="og:site_name">
