--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -41,7 +41,7 @@
         </ul>
       </section>
 
-      {{> google-adsense__ad-main}}
+      {{> google-adsense}}
 
       {{#articles}}
         {{#isFirstInYear}}
