--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -28,7 +28,7 @@
         <p>HTMLを適切な要素を使って書いていくことは実はそれほど難しくはない。しかし過剰に要素を使わずに、かつスタイリングすることも意識して、と適切に“マークアップ”するのはなかなかの修練を必要とする。いったい“マークアップ”するということはどういうことなのだろうか、そしてどのような思考の元に行えば良いのだろうか。</p>
       </section>
 
-      {{> google-adsense__ad-main}}
+      {{> google-adsense}}
 
       <section>
         <h1><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
