--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -36,7 +36,7 @@
           {{/first}}
         </section>
 
-        {{> google-adsense__ad-main}}
+        {{> google-adsense}}
 
         <section id="recent-articles">
           <hr>
