--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -90,7 +90,7 @@
       <?$permalink::is_permalink ne="1"></article></?>
 
       <?$story_counter::count eq="1">
-        {{> google-adsense__ad-main}}
+        {{> google-adsense}}
       </?>
 
       <?$back_and_forth::enabled eq="1">
@@ -104,7 +104,7 @@
           </ol>
         </section>
 
-        {{> google-adsense__ad-main}}
+        {{> google-adsense}}
       </?>
     <?$permalink::is_permalink ne="1"></main></?>
     <?$permalink::is_permalink eq="1"></div></?>
